...
    // MARK: - Session
        
    #if DEBUG
    func loginForUITests() {
        let user = User(
            id: UUID(),
            name: "Test User",
            email: "test@test.com"
        )

        currentUser = user

        if let data = try? JSONEncoder().encode(user) {
            UserDefaults.standard.set(data, forKey: userKey)
...
