...
                            .lineSpacing(4)

                        Spacer().frame(height: 24)

                        // Add to cart button
                        PrimaryButton(
                            title: product.isAvailable ? "Add to Cart" : "Out of Stock"
                        ) {
                            cartViewModel.addProduct(product)
                            withAnimation {
                                    dismiss()
                                }
                        }
...
